--- a/Pages/Game.razor
+++ b/Pages/Game.razor
@@ -4,8 +4,8 @@
 @inject PersistenceService Persistence
 @inject LeaderboardService Leaderboard
 @inject NavigationManager Nav
-@using FlappyMiniApp.Client.Helpers
-@using FlappyMiniApp.Client.Services
+@using AwesomeFlappyClient.Helpers
+@using AwesomeFlappyClient.Services
 
 
 <div class="game-card card">
