--- a/Pages/Settings.razor
+++ b/Pages/Settings.razor
@@ -1,6 +1,6 @@
 ﻿@page "/settings"
-@using FlappyMiniApp.Client.Helpers
-@using FlappyMiniApp.Client.Services
+@using AwesomeFlappyClient.Helpers
+@using AwesomeFlappyClient.Services
 @inject GameSettingsService SettingsService
 @inject PersistenceService Persistence
 @inject NavigationManager Nav
