--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using FlappyMiniApp.Client
-@using FlappyMiniApp.Client.Layout
-@using FlappyMiniApp.Client.Pages
+@using AwesomeFlappyClient
+@using AwesomeFlappyClient.Layout
+@using AwesomeFlappyClient.Pages
