--- a/Pages/Leaderboard.razor
+++ b/Pages/Leaderboard.razor
@@ -1,5 +1,5 @@
 ﻿@page "/leaderboard"
-@using FlappyMiniApp.Client.Services
+@using AwesomeFlappyClient.Services
 @inject LeaderboardService LBS
 @inject NavigationManager Nav
 
