--- a/Pages/Menu.razor
+++ b/Pages/Menu.razor
@@ -31,10 +31,10 @@
         SettingsService.Difficulty = diff;
     }
     
-    private void NavigationGame() => Nav.NavigateTo("/game");
+    private void NavigationGame() => Nav.NavigateTo("game");
     
-    private void NavigationLeaderboard() => Nav.NavigateTo("/leaderboard");
+    private void NavigationLeaderboard() => Nav.NavigateTo("leaderboard");
     
-    private void NavigationSettings() => Nav.NavigateTo("/settings");
+    private void NavigationSettings() => Nav.NavigateTo("settings");
     
 }
