--- a/Pages/Leaderboard.razor
+++ b/Pages/Leaderboard.razor
@@ -25,7 +25,7 @@
     }
 
     <div style="margin-top:12px;">
-        <button class="button" @onclick="()=>GoToGame()" style="pointer-events:auto;">Back</button>
+        <button class="button" @onclick="GoBack" style="pointer-events:auto;">Back</button>
     </div>
 </div>
 
@@ -37,5 +37,5 @@
         scores = await LBS.GetLocalTopAsync();
     }
     
-    private void GoToGame() => Nav.NavigateTo("/game"); 
+    private void GoBack() => Nav.NavigateTo(Nav.BaseUri); 
 }
